// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: 1rem !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: "xx-large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"large","m":"x-large","l":"xx-large","xl":"large"}, align: right, color: inherit, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: right !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: 1rem !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
@media(min-width:480px) {
  :host {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) !important;
  }
}

@media(min-width:760px) {
  :host {
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) !important;
  }
}

@media(min-width:1000px) {
  :host {
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) !important;
  }
}

@media(min-width:1300px) {
  :host {
    font-size: clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem) !important;
  }
}

@media(min-width:1760px) {
  :host {
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) !important;
  }
}
"
`;
